# yad2info-ci

./: .gitignore  README.md  setup.py  setup_local_ci.sh
.github/workflows/: docker-publish.yml  health-check.yml
health-check/: .dockerignore  Chart.yaml  Dockerfile  README.md  main.py  pyproject.toml  run.sh  values.yaml
health_check/: .dockerignore  Dockerfile  main.py  pyproject.toml
health_check/helm-fastapi/: Chart.yaml  values.yam
health_check/helm-fastapi/templates/: _helpers.tpl  deployment.yaml  service.yaml
health_check/k8s/: deployment.yaml  service.yaml
health_check/templates/: _helpers.tpl  deployment.yaml  service.yaml
ng_utils/: db_mongo.py  logger.py  pyproject.toml  setup.py
