[tool.poetry]
name = "health-check"
version = "0.1.0"
description = ""
authors = ["labtest216 <labtest216@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
fastapi = "0.115.6"
uvicorn = "0.34.0"
psutil = "6.1.0"
pymongo = "4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"